# psc-lua-tests

./: psc-lua-tests.cabal
examples/passing/: Applicative.out  Applicative.purs  Arrays.purs  BindersInFunctions.purs  CheckSynonymBug.purs  Conditional.purs  Dollar.purs  EmptyDataDecls.purs  ExternData.purs  ExternRaw.purs  FFI.purs  FunctionScope.purs  Functions2.purs  Guards.purs  InferRecFunWithConstrainedArgument.purs  Let.out  MonadState.purs  MultipleConstructorArgs.out  ObjectUpdate.purs  Person.purs  STArray.purs  Where.out
src/: Main.hs
