name:                psc-lua-tests
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable psc-lua-tests
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       process >=1.2 && <1.3,
                       tasty >=0.8 && <0.9,
                       tasty-hunit >=0.8 && <0.9,
                       random >=1.0 && <1.1,
                       HUnit >= 1.2 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
